amélioration de la visibilité des checkbox + correction

--- a/public/less/custom.less
+++ b/public/less/custom.less
@@ -67,24 +67,22 @@ input{
 			&:after{// COCHE
 				.glyphicon-ok;
 				position: absolute;  
-				top: 0;
 				left: 0;  
 				font-size: @checkbox-size;  
 				color: @success;  
-				.transition(all .2s);  
 			}
 			span{
 				font-family: @base-font;
 			}
 		}
-		&:not(:checked) + label:after {  
-			opacity: 0;  
-			.transform(scale(0));
+		&:not(:checked) + label:after { 
+			.glyphicon-remove;
+			top: 2px;
+			color: lighten(@base-v, 30%);
 		}
 		&:checked + label:after {  
-			opacity: 1;  
-			.transform(scale(1));
-			background-color: fadeout(@success, 75%);
+			top: 0;
+			background-color: fadeout(@success, 50%);
 		}
 		&:checked:focus + label:before,  
 		&:not(:checked):focus + label:before {  
